--- a/Bankprojekt_maven/pom.xml
+++ b/Bankprojekt_maven/pom.xml
@@ -17,13 +17,24 @@
   </properties>
 
   <dependencies>
-	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-	<dependency>
-    		<groupId>org.junit.jupiter</groupId>
-    		<artifactId>junit-jupiter</artifactId>
-    		<version>5.12.0-RC2</version>
-		<scope>test</scope>
-	</dependency>
+    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+    <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.12.0-RC2</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.decimal4j</groupId>
+        <artifactId>decimal4j</artifactId>
+        <version>1.0.3</version>
+    </dependency>
+    <dependency>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.12</version>
+
+    </dependency>
   </dependencies>
 
 <build>
