--- a/Bank_Mocking/untitled/pom.xml
+++ b/Bank_Mocking/untitled/pom.xml
@@ -18,13 +18,21 @@
 
   <dependencies>
 	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-	<dependency>
-    		<groupId>org.junit.jupiter</groupId>
-    		<artifactId>junit-jupiter</artifactId>
-    		<version>5.12.0-RC2</version>
-		<scope>test</scope>
-	</dependency>
-  </dependencies>
+        <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>5.12.0-RC2</version>
+            <scope>test</scope>
+        </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+        <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-core</artifactId>
+          <version>5.17.0</version>
+          <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 <build>
 <plugins>
